extra margin fix

--- a/source/assets/stylesheets/components/_about.scss
+++ b/source/assets/stylesheets/components/_about.scss
@@ -84,6 +84,7 @@
 .about-details-tech {
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
 
 .about-card {
