--- a/source/assets/stylesheets/components/_hero.scss
+++ b/source/assets/stylesheets/components/_hero.scss
@@ -120,4 +120,10 @@
   }
 }
 
+@media (max-width: 460px) {
+  .hero-wrapper {
+    padding: 0 12px;
+  }
+}
+
 
