--- a/source/assets/stylesheets/components/_projects.scss
+++ b/source/assets/stylesheets/components/_projects.scss
@@ -216,6 +216,7 @@
   .project-device-iphone-8 {
     margin-top: -175px;
     margin-bottom: -150px;
+    width: 90%;
   }
   .project-subtitle{
     padding-top: 32px;
@@ -226,7 +227,8 @@
   }
   .project-device-macbook {
     margin-top: -48px;
-    margin-right: -252px;
+    // margin-right: -252px;
+    width: 90%;
   }
   #projects {
     padding-bottom: 60px;
